# checkwise

./: .env.example  .gitignore  .gitleaks.toml  AGENTS.md  CONTRIBUTING.md  DESIGN.md  PRODUCT.md  README.md  dev.sh  dev_demo.sh  docker-compose.yml  install_checkwise_claude_skills.sh  render.yaml  setup_claude_desktop_optimized.sh  skills-lock.json
apps/api/: alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_initial_schema.py  0002_native_intake_foundation.py  0003_provider_workspaces.py  0006_auth_and_rbac.py  0007_user_workspace_link.py  0011_feedback_reports.py  0012_password_reset_tokens.py  0013_canonicalize_persona_type.py  0014_wise_events.py  0015_client_notifications.py  0016_user_profile_fields.py  0017_vendor_contact_phone.py  0018_provider_legal_consent.py  0019_client_notification_severity.py  0020_provider_notifications.py  0021_renewal_reminders.py  0022_client_email.py  0023_client_onboarding_fields.py  0024_notification_dispatch.py  0025_user_notification_preferences.py  0026_notification_template_versions.py  0027_phone_verifications.py  0028_notification_category.py  0029_password_history.py  0030_notif_fabric_backfill.py  0031_audit_log_append_only.py  0032_doc_inspection_shadow.py  0033_user_legal_consent.py  0034_checklist_hot_indexes.py  0035_unique_active_slot.py  0036_status_check_constraints.py  0037_client_multi_user.py  0038_document_authenticity.py  0039_document_verification.py  0040_document_rfc_alignment.py  0041_wise_events_client_scope.py  (+28 more)
apps/api/app/: __init__.py  main.py
apps/api/docs/: N8N_FORM_WEBHOOK_PDF_UPLOAD.md  N8N_LOCAL_DRY_RUN_FIXTURES.md  N8N_METADATA_TEMPLATE_EXPORT.md  N8N_WORKFLOW_SPEC.md  NATIVE_METADATA_TABLE_EXPORT.md  PHASE3_DOCUMENTAI_SETUP.md  PHASE_CLAUDE_DOC_ANALYSIS.md
apps/api/scripts/: add_client_admin.py  add_internal_admin.py  add_provider_to_existing_client.py  add_test_provider.py  backfill_document_folios.py  backfill_metadata.py  build_notifications_pdf.py  calibrate_comprehension.py  calibrate_document_verdicts.py  dev_reset.sh  dev_seed.py  dev_setup.sh  fill_route_policy_defaults.py  flagship_demo_assets.py  introspect_routes.py  migrate_metadata_export_paths.py  provision_test_provider.py  reprocess_prevalidation_evidence.py  reprocess_shadow_analysis.py  run_demo_expiry_freeze.py  run_demo_purge.py  run_intake_queue_consumer.py  run_intake_reconcile.py  run_renewal_audit.py  run_renewal_dispatch.py  run_reporting_dispatch.py  seed_demo_clients.py  seed_demo_sandbox.py  seed_dtp_demo.py  seed_flagship_demo.py  seed_route_policy_manifest.py  seed_user_testing_scenario.py  smoke_auto_supersede.py  ut_2026_06_01_prep.py  verify_dtp.py
apps/api/tests/: conftest.py  test_admin.py  test_admin_entitlements_billing.py  test_admin_org_plan.py  test_alembic_single_head.py  test_audit_package.py  test_auth.py  test_auto_approval.py  test_billing.py  test_calibrate_comprehension.py  test_calibration_harness.py  test_capability_gating.py  test_catalog_v2.py  test_catalog_v2_slots.py  test_client_acceptance_axis.py  test_client_metadata_preview_cache.py  test_client_multi_user_migration.py  test_client_portal.py  test_client_users.py  test_client_vendor_metadata_export.py  test_client_wise_ask.py  test_compliance_future_obligations.py  test_compliance_history_trend.py  test_config.py  test_contact.py  test_cross_tenant_reports_shares_exports.py  test_cutover_active_dispatch.py  test_cutover_slice_c_wiring.py  test_demo_crons.py  test_document_analysis.py  test_document_folios.py  test_document_forensics.py  test_document_image_forensics.py  test_document_intelligence_rfc.py  test_document_verification.py  test_entitlements.py  test_expediente.py  test_feedback.py  test_folio_verification.py  test_intake_queue.py  (+82 more)
apps/api/tools/: __init__.py  build_n8n_review_payload.py  export_pdf_metadata_table.py  test_pdf_metadata_dry_run.py
backend/: pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0004_canonical_keys.py  0005_seed_catalog.py  0008_submission_supersedes.py  0009_reports_core.py  0010_contact_requests.py
backend/app/: main.py
backend/app/constants/: institutions.py  reports.py  statuses.py
backend/app/core/: __init__.py  catalogs.py  compliance_catalog.py  config.py  metadata_rules.py  rate_limit.py  security_gates.py
backend/app/db/: seed.py  session.py
backend/app/models/: __init__.py  entities.py
backend/app/schemas/: reports.py  submissions.py
backend/app/services/: auth.py  contact_service.py  dashboard_compute.py  document_intelligence.py  email_delivery.py  evidence_slots.py  feedback_service.py  portal_session.py  prevalidation.py  report_service.py  requirement_service.py  storage.py  submission_service.py  validation_events.py
backend/docs/: LOCAL_PDF_METADATA_DRY_RUN.md  METADATA_EXTRACTION_RULEBOOK.md
backend/fixtures/n8n/: checkwise_pdf_metadata_form_upload_CLAUDE_LINEAR.json  sample_upload_context_acuse_sisub.json  sample_upload_context_contrato_prestacion_servicios.json
backend/scripts/: dev_seed.py  dev_start.sh  generate_sample_pdfs.py  provision_test_provider.py
backend/tests/: conftest.py  test_auth.py  test_catalog_v2.py  test_catalog_v2_slots.py  test_client_portal.py  test_compliance.py  test_compliance_safety_net.py  test_contact.py  test_email_delivery.py  test_evidence_slots.py  test_feedback.py  test_health.py  test_metadata_rules.py  test_n8n_metadata_template_exporter.py  test_n8n_review_payload_builder.py  test_period_validation.py  test_persona_type_constraint.py  test_portal.py  test_portal_canonical_enrichment.py  test_portal_dashboard.py  test_portal_multi_file_upload.py  test_reports.py  test_reports_compliance_state_block.py  test_reports_copilot.py  test_reports_executor.py  test_reports_planner.py  test_reports_presets.py  test_reports_prioritized_actions_block.py  test_reports_safety.py  test_security_hardening.py  test_seed.py  test_storage.py  test_submission_workflow.py  test_submissions.py  test_workspace_submissions.py
backend/tools/: export_n8n_metadata_templates.py
(+932 files in other folders)
