[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "checkwise-backend"
version = "0.1.0"
description = "CheckWise V1 FastAPI backend"
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.13",
  "anthropic>=0.40",
  "bcrypt>=4.0",
  "jsonschema>=4.21",
  "boto3>=1.35",
  "fastapi>=0.111",
  "psycopg[binary]>=3.1",
  "pyjwt>=2.8",
  "pypdf>=5.0",
  "pydantic-settings>=2.2",
  "python-multipart>=0.0.9",
  "sqlalchemy>=2.0",
  "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27",
  "moto[s3]>=5.0",
  "pytest>=8.0",
  "ruff>=0.5",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
"alembic/versions/*.py" = ["E501"]
"tools/*.py" = ["E501"]
# Test files: long lines are acceptable for assertion strings, seeded
# fixtures, and descriptive parametrize ids.
"tests/*.py" = ["E501"]
