[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "checkwise-backend"
version = "2.5.1"
description = "CheckWise V1 FastAPI backend"
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.13",
  "anthropic>=0.40",
  "bcrypt>=4.0",
  "email-validator>=2.1",
  "jsonschema>=4.21",
  "boto3>=1.35",
  "fastapi>=0.111",
  "google-cloud-documentai>=2.30",
  "psycopg[binary]>=3.1",
  "pyjwt>=2.13",
  "pypdf>=5.0",
  # Phase 10B — server-side PDF rendering for report exports. Drives
  # headless Chromium via a sync API from within a FastAPI
  # BackgroundTask. The chromium binary is provisioned at deploy
  # time via `playwright install --with-deps chromium` (see
  # render.yaml buildCommand).
  "playwright>=1.40",
  # Phase 10C — server-side Excel rendering for report exports.
  # Pure Python, no native deps. Already present as a transitive
  # dep; pinning explicitly so 10C doesn't break if upstream
  # tightens.
  "openpyxl>=3.1",
  "pydantic-settings>=2.2",
  # Phase B (document revalidation, 2026-06-11) — QR decoding from the
  # image XObjects embedded in uploaded PDFs. zxing-cpp ships a
  # self-contained wheel (no system deps). Pillow decodes those
  # embedded images for the scanner; it was previously only a
  # transitive dep, but Render installs via `pip install -e .` so the
  # direct use in document_verification must be declared.
  "zxing-cpp>=2.2",
  "pillow>=10.0",
  "python-multipart>=0.0.9",
  # M4 (2026-06-02) — Redis backend for the shared rate limiter.
  # Optional at runtime: when ``settings.REDIS_URL`` is empty the
  # import is still required but the client is never constructed, so
  # the dep stays in the base list (rather than a [redis] extra) to
  # avoid a provisioning step on every fresh ``pip install``.
  "redis>=5.0",
  "sqlalchemy>=2.0",
  "uvicorn[standard]>=0.30",

  # ---- Transitive floor pins for known CVEs (M5 — 2026-05-25) ----
  # These packages arrive as transitives (idna via anyio/httpx/etc.;
  # starlette via fastapi). Pinning the floor here forces every
  # ``pip install -e .`` to resolve to the patched version even when
  # the parent dep's range still allows the vulnerable one. Move the
  # floor up when the next CVE lands; remove entirely once every
  # parent dep tightens its own constraint.
  "idna>=3.15",        # GHSA-65pc-fj4g-8rjx — fixed in 3.15
  "starlette>=1.0.1",  # PYSEC-2026-161 — fixed in 1.0.1
  "aiohttp>=3.14.0",   # GHSA-jg22-mg44-37j8 / GHSA-hg6j-4rv6-33pg
]

[project.optional-dependencies]
dev = [
  "fakeredis>=2.20",
  # ``lupa`` is fakeredis's Lua engine — needed because the M4 sliding
  # window uses an EVAL/EVALSHA script. Without it the in-process Redis
  # raises "unknown command 'evalsha'" and the parametrised backend
  # tests fail.
  "lupa>=2.0",
  "httpx>=0.27",
  "moto[s3]>=5.0",
  "pytest>=8.0",
  "ruff>=0.5",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
"alembic/versions/*.py" = ["E501"]
"tools/*.py" = ["E501"]
# Test files: long lines are acceptable for assertion strings, seeded
# fixtures, and descriptive parametrize ids.
"tests/*.py" = ["E501"]
# Operational scripts (one-off provisioning / seed tools): long lines
# in log/print strings and policy-template literals are intentional.
"scripts/*.py" = ["E501"]
# Wise LLM system prompts: each rule is one paragraph by design so the
# model sees coherent guidance, not arbitrary line wraps.
"app/services/wise/ai.py" = ["E501"]
"app/services/wise/client_ai.py" = ["E501"]
# Report renderers: long lines are inline HTML / layout-template literals,
# not wrappable code. ``deterministic_layouts`` also imports after a
# module-level logger/registry block by design (E402).
"app/services/reports/print_render.py" = ["E501"]
"app/services/reports/deterministic_layouts.py" = ["E501", "E402"]
